--- a/notebook-xview3-blog-walkthrough.ipynb
+++ b/notebook-xview3-blog-walkthrough.ipynb
@@ -4,32 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Detect dark vessel fishing activity in satellite imagery on Amazon SageMaker\n",
+    "# xView3 SAR - Object detection on giga-pixel satellite imagery\n",
     "\n",
     "## Background\n",
     "\n",
-    "In this notebook, we demonstrate how to train, evaluate, and deploy .\n",
-    "\n",
-    "Steps:\n",
-    "* ~~Setup~~\n",
-    "* Data preparation:\n",
-    "    * ~~prepare labels csv dataframe ~~\n",
-    "        * ~~merge train + val~~\n",
-    "        * ~~create new val, new train, and mini train for hyperparameter exploration~~\n",
-    "    * ~~create annotations~~ \n",
-    "        * ~~training:full scene~~\n",
-    "        *  ~~full scene validation set (no need to do for public leaderboard)~~\n",
-    "    * ~~SM processing jobs:\n",
-    "        * ~~convert public and validation set to hdf5 for faster inference (it’s about 10x faster dataloading w/ hdf5 input than geotif images)~~\n",
-    "        * ~~[optional] chip scenes, demo on tiny.~~\n",
-    "    * Modify dataset dict w/ path?, check file paths and upload dataset dict to S3.\n",
-    "    * Modify dataset dict for scenes/files actually present on machine when `s3shardedbykey=True`\n",
-    "* Train\n",
-    "* Inference on leaderboard images & scoring\n",
-    "    * Batch Transform for inference\n",
-    "        * time speed to convert to hdf5 from tif for speedup?\n",
-    "    * SM processing for evaluation\n",
-    "* Visualize -> move this to separate notebook?, this would not be part of the pipeline."
+    "In this notebook, we demonstrate how to train, evaluate, and deploy a custom object detection model for xView3 SAR."
    ]
   },
   {
